# fastapi-books-app

./: README.md  docker-compose.yaml  env.example  pyproject.toml  todo.md
fastapi_books/: config.py  main.py  run.py
fastapi_books/dto/: books.py  ratings.py
fastapi_books/routes/: books.py  ratings.py
