[tool.poetry]
name = "fastapi-books"
version = "0.1.0"
description = ""
authors = ["krzemLech <krzemmo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.42"
alembic = "^1.16.4"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev = "fastapi_books.run:run_dev"
prod = "fastapi_books.run:run_prod"